<resources>
    <string name="app_name">calculatorApp</string>
    <string name="calc_text">123456789</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiplication">*</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="clear">CLR</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
</resources>